feat: merge kinokoG